--- a/internal/templ/layout.templ
+++ b/internal/templ/layout.templ
@@ -10,7 +10,9 @@ templ header(title string) {
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{ title }</title>
+        <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="/static/style.css" type="text/css" rel="stylesheet" crossorigin="anonymous">
   </head>
 }
 
@@ -18,7 +20,7 @@ templ navbar() {
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/static/favicon.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Bootstrap
             </a>
         </div>
