--- a/internal/templ/layout.templ
+++ b/internal/templ/layout.templ
@@ -3,6 +3,8 @@ package templ
 import (
     "time"
 	"strconv"
+
+	"github.com/sebomancien/goth-template/internal/context"
 )
 
 templ header(title string) {
@@ -31,7 +33,7 @@ templ footer() {
     <footer>
         <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="toggle-theme">
+                <input class="form-check-input" type="checkbox" role="switch" id="toggle-theme" onclick="toggleTheme()" checked?={ context.GetTheme(ctx) == "light" }>
                 <label class="form-check-label" for="toggle-theme">Light</label>
             </div>
             <div>&copy; { strconv.Itoa(time.Now().Year()) } - Version 2025.2.0</div>
@@ -47,7 +49,7 @@ templ footer() {
 
 templ Layout(title string, content templ.Component) {
     <!doctype html>
-    <html>
+    <html data-bs-theme={ context.GetTheme(ctx) }>
         @header(title)
         <body class="d-flex flex-column vh-100">
             @navbar()
@@ -57,6 +59,7 @@ templ Layout(title string, content templ.Component) {
             @footer()
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+            <script src="/static/scripts.js" crossorigin="anonymous" defer></script>
         </body>
     </html>
 }
